# vector-graph-memory

./: .dockerignore  .env.example  .gitignore  AGENTS.md  API.md  Dockerfile  MODEL_SELECTION.md  README.md  docker-compose.yml  janusgraph-config.properties  janusgraph-init.groovy  playground.ipynb  playground_api.ipynb  pyproject.toml  start_api.sh
.github/workflows/: cd.yml  ci.yml  release-recovery.yml
docs/plans/: dspy-rag-implementation.md  rules-lawyer-roadmap.md  rules-lawyer-strategy.md  seti-free-action-authority-manual-seed-spec.md  seti-free-action-authority-subsystem-brief.md  seti-landing-orbiter-manual-seed-spec.md  seti-landing-orbiter-subsystem-brief.md  seti-pilot-next-steps.md
nginx/: default.conf
scripts/: audit_rule_load.py  compile_rule_extractor.py  import_manual_seed.py  init_janusgraph_schema.py  materialize_rule_extraction_seed.py  run_dspy_proof.py  run_pilot_ruling.py  run_pilot_ruling_eval.py  run_rule_extraction.py  smoke_traverse_manual_seed.py  verify_manual_seed.py
src/vgm/: MemoryAgent.py  VectorGraphStore.py  __init__.py  model_provider.py
src/vgm/api/: __init__.py  server.py
src/vgm/audit/: AuditBackend.py  JSONLAuditBackend.py  MongoAuditBackend.py  __init__.py
src/vgm/config/: AuditConfig.py  MemoryConfig.py  MemoryTriggerConfig.py  VectorGraphConfig.py  __init__.py
src/vgm/rag/: __init__.py  artifacts.py  compile_manager.py  context_builder.py  eval_dataset.py  eval_judge.py  eval_scoring.py  evaluation.py  models.py  run_logging.py  synthesizer.py
src/vgm/rules/: __init__.py  adjudication.py  contracts.py  dspy.py  extraction.py  load_audit.py  ruling_eval.py  rulings.py
src/vgm/schemas/: AuditEntry.py  EdgeMetadata.py  NodeMetadata.py  SimilarNode.py  __init__.py
tests/: test_api_rag_synthesis.py  test_model_provider.py  test_rag_artifacts.py  test_rag_compile_manager.py  test_rag_context_builder.py  test_rag_eval_dataset.py  test_rag_eval_judge.py  test_rag_eval_scoring.py  test_rag_evaluation.py  test_rag_run_logging.py  test_rag_synthesizer.py  test_rules_adjudication.py  test_rules_api.py  test_rules_contracts.py  test_rules_dspy.py  test_rules_extraction.py  test_rules_load_audit.py  test_rules_ruling_eval.py  test_rules_rulings.py
tests/fixtures/rag_eval/: README.md  seti_landing_orbiter_seed_v1_edges.jsonl  (+9 more)
vector_graph_memory/: __init__.py  embeddings.py  memory.py
(+1 files in other folders)
