[project]
name = "vector-graph-memory"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "gremlinpython>=3.8.0",
    "pydantic-ai>=1.70.0",
    "qdrant-client>=1.17.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "notebook>=7.5.5",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
]
